welcome.lessons.welcome.summative.Moria.scala.code
def fuyezPauvresFous() = {
  while(!estSurBiscuit() && !estFaceMur()){
    avance()
  }
  ramasseBiscuit()
  gauche();gauche()
  while(!estSurBiscuit()){
    avance()
  }
  recule()
  poseBiscuit()
}